スキルの使用条件を変更 プレイヤーに所持スキルのリスト追加　メソッド周りの追加 スキルのバグ修正